@@ -47,10 +47,9 @@ class ConfigMapConfigPropertiesTests {
 	 */
 	@Test
 	void testUseNameAsPrefixUnsetEmptySources() {
-		ConfigMapConfigProperties properties = new ConfigMapConfigProperties();
-		properties.setSources(Collections.emptyList());
-		properties.setName("config-map-a");
-		properties.setNamespace("spring-k8s");
+		ConfigMapConfigProperties properties = new ConfigMapConfigProperties(
+			true, List.of(), List.of(), Map.of(), true, "config-map-a", "spring-k8s", false, false, false, RetryProperties.DEFAULT
+		);
 
 		List<NormalizedSource> sources = properties.determineSources(new MockEnvironment());
 		Assertions.assertEquals(sources.size(), 1, "empty sources must generate a List with a single NormalizedSource");
@@ -75,11 +74,9 @@ class ConfigMapConfigPropertiesTests {
 	 */
 	@Test
 	void testUseNameAsPrefixSetEmptySources() {
-		ConfigMapConfigProperties properties = new ConfigMapConfigProperties();
-		properties.setSources(Collections.emptyList());
-		properties.setUseNameAsPrefix(true);
-		properties.setName("config-map-a");
-		properties.setNamespace("spring-k8s");
+		ConfigMapConfigProperties properties = new ConfigMapConfigProperties(
+			true, List.of(), List.of(), Map.of(), true, "config-map-a", "spring-k8s", true, false, false, RetryProperties.DEFAULT
+		);
 
 		List<NormalizedSource> sources = properties.determineSources(new MockEnvironment());
 		Assertions.assertEquals(sources.size(), 1, "empty sources must generate a List with a single NormalizedSource");
@@ -106,13 +103,13 @@ class ConfigMapConfigPropertiesTests {
 	 */
 	@Test
 	void testUseNameAsPrefixUnsetNonEmptySources() {
-		ConfigMapConfigProperties properties = new ConfigMapConfigProperties();
-		properties.setUseNameAsPrefix(true);
-		properties.setNamespace("spring-k8s");
 
 		ConfigMapConfigProperties.Source one = new ConfigMapConfigProperties.Source("config-map-one", null,
-				Collections.emptyMap(), null, null, null);
-		properties.setSources(Collections.singletonList(one));
+			Collections.emptyMap(), null, null, null);
+
+		ConfigMapConfigProperties properties = new ConfigMapConfigProperties(
+			true, List.of(), List.of(one), Map.of(), true, "config-map-a", "spring-k8s", true, false, false, RetryProperties.DEFAULT
+		);
 
 		List<NormalizedSource> sources = properties.determineSources(new MockEnvironment());
 		Assertions.assertEquals(sources.size(), 1, "a single NormalizedSource is expected");
@@ -144,9 +141,6 @@ class ConfigMapConfigPropertiesTests {
 	 */
 	@Test
 	void testUseNameAsPrefixSetNonEmptySources() {
-		ConfigMapConfigProperties properties = new ConfigMapConfigProperties();
-		properties.setUseNameAsPrefix(true);
-		properties.setNamespace("spring-k8s");
 
 		ConfigMapConfigProperties.Source one = new ConfigMapConfigProperties.Source("config-map-one", null,
 				Collections.emptyMap(), null, false, null);
@@ -157,7 +151,10 @@ class ConfigMapConfigPropertiesTests {
 		ConfigMapConfigProperties.Source three = new ConfigMapConfigProperties.Source("config-map-three", null,
 				Collections.emptyMap(), null, true, null);
 
-		properties.setSources(Arrays.asList(one, two, three));
+		ConfigMapConfigProperties properties = new ConfigMapConfigProperties(
+			true, List.of(), List.of(one, two, three), Map.of(), true, "config-map-a",
+			"spring-k8s", true, false, false, RetryProperties.DEFAULT
+		);
 
 		List<NormalizedSource> sources = properties.determineSources(new MockEnvironment());
 		Assertions.assertEquals(sources.size(), 3, "3 NormalizedSources are expected");
@@ -192,9 +189,6 @@ class ConfigMapConfigPropertiesTests {
 	 */
 	@Test
 	void testMultipleCases() {
-		ConfigMapConfigProperties properties = new ConfigMapConfigProperties();
-		properties.setUseNameAsPrefix(false);
-		properties.setNamespace("spring-k8s");
 
 		ConfigMapConfigProperties.Source one = new ConfigMapConfigProperties.Source("config-map-one", null,
 				Collections.emptyMap(), "one", false, null);
@@ -208,7 +202,10 @@ class ConfigMapConfigPropertiesTests {
 		ConfigMapConfigProperties.Source four = new ConfigMapConfigProperties.Source(null, "config-map-four",
 				Collections.emptyMap(), null, false, null);
 
-		properties.setSources(Arrays.asList(one, two, three, four));
+		ConfigMapConfigProperties properties = new ConfigMapConfigProperties(
+			true, List.of(), List.of(one, two, three, four), Map.of(), true, "config-map-a",
+			"spring-k8s", true, false, false, RetryProperties.DEFAULT
+		);
 
 		List<NormalizedSource> sources = properties.determineSources(new MockEnvironment());
 		Assertions.assertEquals(sources.size(), 4, "4 NormalizedSources are expected");
@@ -238,10 +235,11 @@ class ConfigMapConfigPropertiesTests {
 	 */
 	@Test
 	void testUseIncludeProfileSpecificSourcesNoChanges() {
-		ConfigMapConfigProperties properties = new ConfigMapConfigProperties();
-		properties.setSources(Collections.emptyList());
-		properties.setName("config-map-a");
-		properties.setNamespace("spring-k8s");
+
+		ConfigMapConfigProperties properties = new ConfigMapConfigProperties(
+			true, List.of(), List.of(), Map.of(), true, "config-map-a",
+			"spring-k8s", false, true, false, RetryProperties.DEFAULT
+		);
 
 		List<NormalizedSource> sources = properties.determineSources(new MockEnvironment());
 		Assertions.assertEquals(sources.size(), 1, "empty sources must generate a List with a single NormalizedSource");
@@ -268,11 +266,11 @@ class ConfigMapConfigPropertiesTests {
 	 */
 	@Test
 	void testUseIncludeProfileSpecificSourcesDefaultChanged() {
-		ConfigMapConfigProperties properties = new ConfigMapConfigProperties();
-		properties.setSources(Collections.emptyList());
-		properties.setName("config-map-a");
-		properties.setNamespace("spring-k8s");
-		properties.setIncludeProfileSpecificSources(false);
+
+		ConfigMapConfigProperties properties = new ConfigMapConfigProperties(
+			true, List.of(), List.of(), Map.of(), true, "config-map-a",
+			"spring-k8s", false, false, false, RetryProperties.DEFAULT
+		);
 
 		List<NormalizedSource> sources = properties.determineSources(new MockEnvironment());
 		Assertions.assertEquals(sources.size(), 1, "empty sources must generate a List with a single NormalizedSource");
@@ -305,11 +303,6 @@ class ConfigMapConfigPropertiesTests {
 	 */
 	@Test
 	void testUseIncludeProfileSpecificSourcesDefaultChangedSourceOverride() {
-		ConfigMapConfigProperties properties = new ConfigMapConfigProperties();
-		properties.setSources(Collections.emptyList());
-		properties.setName("config-map-a");
-		properties.setNamespace("spring-k8s");
-		properties.setIncludeProfileSpecificSources(false);
 
 		ConfigMapConfigProperties.Source one = new ConfigMapConfigProperties.Source("config-map-one", null,
 				Collections.emptyMap(), "one", null, true);
@@ -320,7 +313,10 @@ class ConfigMapConfigPropertiesTests {
 		ConfigMapConfigProperties.Source three = new ConfigMapConfigProperties.Source("config-map-three", null,
 				Collections.emptyMap(), null, null, false);
 
-		properties.setSources(Arrays.asList(one, two, three));
+		ConfigMapConfigProperties properties = new ConfigMapConfigProperties(
+			true, List.of(), List.of(one, two, three), Map.of(), true, "config-map-a",
+			"spring-k8s", false, false, false, RetryProperties.DEFAULT
+		);
 
 		List<NormalizedSource> sources = properties.determineSources(new MockEnvironment());
 		Assertions.assertEquals(sources.size(), 3);
@@ -363,10 +359,6 @@ class ConfigMapConfigPropertiesTests {
 	 */
 	@Test
 	void testLabelsMultipleCases() {
-		ConfigMapConfigProperties properties = new ConfigMapConfigProperties();
-		properties.setUseNameAsPrefix(false);
-		properties.setNamespace("spring-k8s");
-		properties.setIncludeProfileSpecificSources(false);
 
 		ConfigMapConfigProperties.Source one = new ConfigMapConfigProperties.Source(null, null,
 				Map.of("first-label", "configmap-one"), "one", false, null);
@@ -380,7 +372,10 @@ class ConfigMapConfigPropertiesTests {
 		ConfigMapConfigProperties.Source four = new ConfigMapConfigProperties.Source(null, null,
 				Map.of("fourth-label", "configmap-four"), null, null, null);
 
-		properties.setSources(Arrays.asList(one, two, three, four));
+		ConfigMapConfigProperties properties = new ConfigMapConfigProperties(
+			true, List.of(), List.of(one, two, three, four), Map.of(), true, "config-map-a",
+			"spring-k8s", false, false, false, RetryProperties.DEFAULT
+		);
 
 		List<NormalizedSource> sources = properties.determineSources(new MockEnvironment());
 		// we get 8 property sources, since "named" ones with "application" are
